parser/tests/bad/decl01-3.st
% re-declaration of identifier 'x'
%   procedure

const p := 1
procedure p()
  % empty
end p
